Registro de unidades económicas. Faltan pruebas

--- a/front/src/main/webapp/jade/signup-ue.jade
+++ b/front/src/main/webapp/jade/signup-ue.jade
@@ -240,7 +240,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='codigoPostal')
 
 								dl.question
 									dt
@@ -249,7 +249,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='latitud')
 
 								dl.question
 									dt
@@ -258,7 +258,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='longitud')
 
 
 							fieldset
@@ -272,7 +272,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='nombreRepresentante')
 
 								dl.question
 									dt
@@ -281,7 +281,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='telefono')
 
 								dl.question
 									dt
@@ -290,7 +290,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='extension')
 
 
 								dl.question
@@ -300,7 +300,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='correo')
 
 
 								dl.question
@@ -310,7 +310,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='url')
 
 								dl.question
 									dt
@@ -319,7 +319,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='facebook')
 
 								dl.question
 									dt
@@ -328,7 +328,7 @@ html.no-js
 									dd.answers
 										ul
 											li.input-text
-												input(type='text')
+												input(type='text', name='twitter')
 
 							.error
 								span Mensaje de error
