--- a/front/src/main/webapp/jade/includes/header.jade
+++ b/front/src/main/webapp/jade/includes/header.jade
@@ -1,6 +1,6 @@
 header.main-header
 	.main-logo
-		a(href='index.html') site
+		a(href='dashboard.html') site
 
 label(for='activate-menu', class='btn-alpha btn-activate-menu')
 	i.fa.fa-bars
