--- a/front/src/main/webapp/jade/includes/nav.jade
+++ b/front/src/main/webapp/jade/includes/nav.jade
@@ -2,11 +2,11 @@ nav#main-nav
 	.container
 		ul.row
 			li.g2
-				a(href='index.html')
+				a(href='dashboard.html')
 					span.icon
 					span.tag Dashboard de inicio
 			li.g2
-				a(href='actualidad.html')
+				a(href='news.html')
 					span.icon
 					span.tag Actualidad en la industria
 			li.g2
