--- a/front/src/main/webapp/jade/login-qr.jade
+++ b/front/src/main/webapp/jade/login-qr.jade
@@ -1,4 +1,4 @@
-include mixins
+include includes/mixins
 doctype html
 html
 
@@ -9,9 +9,13 @@ html
 			h1 aie
 			h2 Sistema de Inteligencia y Tecnología Empresarial
 
-		.login-form
+		.login-select
+			.title
+				h3 Bienvenido
 
-			#altContent
+			.qr-container
+				#altContent
+			
 		
 
 		script(src="js/qr/swfobject.js")
@@ -32,7 +36,7 @@ html
 			};
 			swfobject.embedSWF(
 				"js/qr/QR.swf", 
-				"altContent", 300, 180, "10.0.0", 
+				"altContent", 272, 272, "10.0.0", 
 				"expressInstall.swf", 
 				flashvars, 
 				params, 
@@ -42,11 +46,11 @@ html
 			function actQR( msg ){
 				// msg comes null if no code were detected
 				if( msg === null ){ //expect a lot of nulls
-					console.log("no QR were read at this time")
+					// console.log("no QR were read at this time")
 				} else {
 					// a valid QR reading, do something with it
-					console.log(msg)
-					window.location.href="/news.html";
+					// console.log(msg)
+					window.location.href="/dashboard.html";
 					// ask flash to stop parsing, this saves processing as webcam reading stop
 					QR.stop()
 				}
@@ -67,4 +71,4 @@ html
 					// third is an signature for callback if something goes wrong, aka, user has no Webcam (default: null)
 					QR.start( "actQR", 200, "noWebcam" )
 				}
-			}, 1000)
+			}, 500)
