--- a/front/src/main/webapp/jade/view-new.jade
+++ b/front/src/main/webapp/jade/view-new.jade
@@ -1,4 +1,4 @@
-include mixins
+include includes/mixins
 doctype html
 html.no-js
 
@@ -9,9 +9,9 @@ html.no-js
 		.main-wrapper
 			header.main-header
 				.main-logo
-					a(href='index.html') site
+					a(href='dashboard.html') site
 
-			a(href='index.html', class='btn-alpha btn-back')
+			a(href='dashboard.html', class='btn-alpha btn-back')
 				i.fa.fa-chevron-left
 				|  Regresar
 
