--- a/front/src/main/webapp/sass/_login.sass
+++ b/front/src/main/webapp/sass/_login.sass
@@ -71,3 +71,44 @@
 		color: $red
 		font-size: 0.8em
 		text-align: center
+
+
+
+.login-select
+	margin: 0 auto
+	padding: $spacer 
+	max-width: 500px
+
+	h3
+		display: inline-block
+		margin-bottom: $spacer
+		padding-bottom: $spacer/2
+		font-size: 2em
+		border-bottom: 2px solid $lightgray
+
+	p
+		margin-bottom: $spacer*2
+
+	ul
+		display: block
+		
+		margin: 0 auto
+	li
+		display: block
+		margin-bottom: $spacer
+
+	a
+		+bx
+		text-align: center
+		display: block
+		width: 100%
+		padding: $spacer/2
+		font-size: 1.3em
+
+
+.qr-container
+	margin: 0 auto
+	
+	object
+		margin: 0 auto
+
