--- a/front/src/main/webapp/jade/index.jade
+++ b/front/src/main/webapp/jade/index.jade
@@ -1,171 +1,27 @@
-include mixins
+include includes/mixins
 doctype html
-html.no-js
+html
 
 	include includes/head
 
 	body
+		.login-head			
+			h1 aie
+			h2 Sistema de Inteligencia y Tecnología Empresarial
 
-		.main-wrapper
-			include includes/header
-			
-			nav.main-nav
-				ul.nav-listing
-					li.selected: a(href='index.html')
-						span.icon
-						span.tag Dashboard de inicio
-					li: a(href='news.html')
-						span.icon
-						span.tag Actualidad de la industria
-					li: a(href='question.html')
-						span.icon
-						span.tag Perfil
-					li: a(href='alerts.html')
-						span.icon
-						span.tag Alertas y notifiaciones
-					li: a(href='ic.html')
-						span.icon
-						span.tag Inteligencia comercial
-					li: a(href='#')
-						span.icon
-						span.tag Inteligencia social
-					
-
-			section.main-container
-				+container-overlay
-
-				.panel-header-summary
-					.container
-						.profile-info
-							.profile-pic
-								img(src='img/logo.jpg')
-							.title
-								h1 Textiles y acabados de México SA de CV
-
-						.summary
-							.col.location
-								h3
-									i.fa.fa-map-marker
-									| Locación
-								ul
-									li Estado de Hidalgo
-									li Tula de Allende
-									li San Miguel Vindho
-							.col.ue-info
-								h3
-									i.fa.fa-circle-o
-									| Unidad económica
-								ul
-									li [314991] Confección, bordado y deshilado de productos textiles
-							.col.employees
-								h3
-									i.fa.fa-users
-									| Número de empleados
-								ul
-									li De 10 a 50 empleados
-							.col.profile-chart-container
-								h3
-									i.fa.fa-tasks
-									| Perfil
-								
-								.chart.cf
-									.percentage
-										a(href='question.html')
-											span.number.js-profileChartHomePercentage 82%
-											span.tag Completado
-
-									canvas#profileChartHome(height='60', width='60')
+		.login-select
+			.title
+				h3 Bienvenido
+			p Selecciona el método de ingreso:
+			ul
+				li
+					a(href='login-qr.html').btn
+						i.fa.fa-qrcode
+						|  Ingresa tu tarjeta QR
+				li
+					a(href='login-normal.html').btn
+						i.fa.fa-lock
+						|  Ingresa un usuario y contraseña
 
 
-				.panel-widget-container
-					.container
-						.widget.widget-news
-							h2
-								a(href='#') Actualidad en la industria
-
-							ul
-								- for(i=0 ; i<4 ; i++) {
-								+get-new-widget
-									
-								- }
-
-							footer.action
-								a(href='actualidad.html').link Ver más
-									i.fa.fa-arrow-right
-
-						.widget.widget-news
-							h2
-								br
-
-							ul
-								- for(i=0 ; i<4 ; i++) {
-								+get-new-widget
-									
-								- }
-
-							footer.action
-								a(href='actualidad.html').link Ver más
-									i.fa.fa-arrow-right
-
-						.widget.widget-news
-							h2
-								br
-
-							ul
-								- for(i=0 ; i<4 ; i++) {
-								+get-new-widget
-									
-								- }
-
-							footer.action
-								a(href='actualidad.html').link Ver más
-									i.fa.fa-arrow-right
-
-	
-
-			include includes/notifications
-
-		#data
-			#profileChartHomeAnswered 82
-			#profileChartHomeNoAnswered 18
-
-		include includes/scripts
-
-
-		script.
-
-			$(window).bind("load", function() {
-
-				profileChartHomeAnsweredValue = parseInt($('#profileChartHomeAnswered').text());
-				profileChartHomeNoAnsweredValue = parseInt($('#profileChartHomeNoAnswered').text());
-
-				console.log(profileChartHomeAnsweredValue);
-				console.log(profileChartHomeNoAnsweredValue);
-
-				var profileChartHomeData = [
-					{
-						value: profileChartHomeAnsweredValue,
-						color: "#8CC63F"
-					},
-					{
-						value : profileChartHomeNoAnsweredValue,
-						color : "#E6E6E6"
-					}
-
-				];
-
-
-				var profileChartHomeConfig = {
-					segmentShowStroke : false,
-					percentageInnerCutout : 70,
-					animationSteps : 100,
-					animationEasing : "easeOutCirc",
-					animateRotate : true,
-					animateScale : false,
-					onAnimationComplete : null
-				}
-					
-
-
-				var profileChartHome = new Chart(document.getElementById("profileChartHome").getContext("2d")).Doughnut(profileChartHomeData, profileChartHomeConfig);
-			});
+		
