--- a/front/src/main/webapp/jade/news-tweets.jade
+++ b/front/src/main/webapp/jade/news-tweets.jade
@@ -1,4 +1,4 @@
-include mixins
+include includes/mixins
 doctype html
 html.no-js
 
@@ -11,7 +11,7 @@ html.no-js
 			
 			nav.main-nav
 				ul.nav-listing
-					li: a(href='index.html')
+					li: a(href='dashboard.html')
 						span.icon
 						span.tag Dashboard de inicio
 					li.selected: a(href='news.html')
@@ -26,9 +26,7 @@ html.no-js
 					li: a(href='ic.html')
 						span.icon
 						span.tag Inteligencia comercial
-					li: a(href='is.html')
-						span.icon
-						span.tag Inteligencia social
+
 					
 
 			section.main-container
@@ -50,9 +48,11 @@ html.no-js
 											li.selected: a(href='news-tweets.html').btn-outline
 												i.fa.fa-twitter
 												span Tweets
-											li: a(href='#').btn-outline
-												i.fa.fa-book
-												span Patentes
+											
+											//-
+												li: a(href='#').btn-outline
+													i.fa.fa-book
+													span Patentes
 
 								.right
 									form(ng-submit='filter()')
