--- a/front/src/main/webapp/jade/signup-ue.jade
+++ b/front/src/main/webapp/jade/signup-ue.jade
@@ -1,4 +1,4 @@
-include mixins
+include includes/mixins
 doctype html
 html.no-js
 
@@ -11,10 +11,10 @@ html.no-js
 
 			nav.main-nav
 				ul.nav-listing
-					li: a(href='index.html')
+					li: a(href='dashboard.html')
 						span.icon
 						span.tag Dashboard de inicio
-					li: a(href='actualidad.html')
+					li: a(href='news.html')
 						span.icon
 						span.tag Actualidad de la industria
 					li: a(href='question.html')
@@ -26,9 +26,7 @@ html.no-js
 					li: a(href='ic.html')
 						span.icon
 						span.tag Inteligencia comercial
-					li: a(href='#')
-						span.icon
-						span.tag Inteligencia social
+
 
 
 			section.main-container
