Fixes en pantallas, quitamos UE, agregamos Lightbbox en alertas

--- a/front/src/main/webapp/jade/alerts-view.jade
+++ b/front/src/main/webapp/jade/alerts-view.jade
@@ -121,7 +121,7 @@ html.no-js
 									p Datos de la Dirección de Planeación, Análisis y Proyectos Estratégicos de la Sefoe y cifras preliminares de la Administración General de Aduanas revelan que en 2013 las exportaciones del sector textil y confección sumaron 339 millones 802 mil 984.17 dólares, siendo el segundo con mayor porcentaje de participación en el total de Yucatán, representando el 23.25 por ciento.
 									p Las exportaciones provinieron de 52 empresas, y los principales destinos fueron Luxemburgo, Estados Unidos, Macao, Islas Caimán y Canadá; mientras que los productos más demandados fueron trajes, ternos, pantalones, vestidos, filamentos sintéticos o artificiales, guata, fieltro y tela no tejida.
 								.action
-									a(href='#').btn Solicitar más información 
+									a(href='#alert-contact').lb-alert-contact.btn Solicitar más información 
 										i.fa.fa-chevron-right
 
 								.categories-listing
@@ -134,6 +134,27 @@ html.no-js
 												a(href='#').tag-cat-line.orange Comercio
 											li
 												a(href='#').tag-cat-line.blue General
+
+				#alert-contact.lb
+					form(action='#')
+						h2 <i class='fa fa-envelope-square'></i> Solicitar más información.
+						
+						fieldset.subject
+							label Estás solicitando más información sobre: 
+							p Congreso de la industria textil 2014.
+							
+						fieldset.message
+							label Describe lo que te gustaría saber:
+							textarea
+
+						.action
+							.half
+								.left
+									br
+
+								.right
+									button(type='submit').btn Enviar 
+										i.fa.fa-chevron-right
 
 
 
