--- a/front/src/main/webapp/jade/ic.jade
+++ b/front/src/main/webapp/jade/ic.jade
@@ -42,7 +42,7 @@ html.no-js
 							.item.prov
 								header
 									h3 163
-									span UE proveedores
+									span proveedores
 								dl
 									dt Top 3
 									dd
@@ -55,7 +55,7 @@ html.no-js
 							.item.comp
 								header
 									h3 232
-									span UE competidoras
+									span competidores
 								dl
 									dt Top 3
 									dd
@@ -68,7 +68,7 @@ html.no-js
 							.item.dist
 								header
 									h3 2991
-									span UE distribuidoras
+									span distribuidores
 								dl
 									dt Top 3
 									dd
