Fix a links para previsualizar noticias en news, fix visualizar imagenes

--- a/front/src/main/webapp/jade/news-tweets.jade
+++ b/front/src/main/webapp/jade/news-tweets.jade
@@ -115,7 +115,7 @@ html.no-js
 										span @{{ tweet.userScreenName }}
 
 								.source-link
-									a(href='{{ tweet.url }}').link Ver tweet
+									a(href='{{ tweet.url }}', target='_blank').link Ver tweet
 										i.fa.fa-arrow-right
 				
 	
