modulo vocaciones/servicios unidad_economica

--- a/front/src/main/webapp/jade/login-qr.jade
+++ b/front/src/main/webapp/jade/login-qr.jade
@@ -15,6 +15,7 @@ html
 
 			.qr-container
 				#altContent
-				
+
+		script(src='bower_components/jquery/dist/jquery.js')
 		script(src="js/qr/swfobject.js")
 		script(src="js/qr/qrctrl.js")
