--- a/front/src/main/webapp/sass/_login.sass
+++ b/front/src/main/webapp/sass/_login.sass
@@ -24,6 +24,8 @@
 
 	.title
 		text-align: center
+		p
+			margin-bottom: $spacer
 
 	h3
 		display: inline-block
@@ -78,6 +80,7 @@
 	margin: 0 auto
 	padding: $spacer 
 	max-width: 500px
+	text-align: center
 
 	h3
 		display: inline-block
@@ -108,6 +111,7 @@
 
 .qr-container
 	margin: 0 auto
+	text-align: center
 	
 	object
 		margin: 0 auto
