--- a/front/src/main/webapp/sass/_ic.sass
+++ b/front/src/main/webapp/sass/_ic.sass
@@ -82,6 +82,14 @@
 
 
 
+.gm-style .gm-style-iw, .gm-style .gm-style-iw a, .gm-style .gm-style-iw span, .gm-style .gm-style-iw label, .gm-style .gm-style-iw div
+	max-height: 280px
+	padding: 0px 10px 5px 5px
+	overflow-y: scroll
+	overflow-x: visible
+
+.gm-style-iw div
+	overflow: visible !important
 
 
 
