--- a/front/src/main/webapp/sass/_layout.sass
+++ b/front/src/main/webapp/sass/_layout.sass
@@ -56,7 +56,7 @@ $main-nav-height: 45px
 	left: 0
 	bottom: 0
 	right: 0
-	overflow-y: scroll
+	
 	
 	.nav-listing
 		font-size: 0.9em
@@ -252,23 +252,44 @@ $main-nav-height: 45px
 
 
 // mobile
-
 @media screen and (max-width: 640px)
 	.container
 		max-width: 640px
 		width: 100%
 
 	.btn-activate-menu
-		+no-select
 		display: block
 
 	.main-nav
 		left: -$main-nav-width
+		overflow-y: scroll
 
 	.main-container
 		left: 0
 		width: 100%
 
+
+	.activate-menu
+		&:checked ~ .main-container
+			overflow: hidden
+
+
+// tablet
+@media screen and (max-width: 768px)
+	.container
+		max-width: 768px
+		width: 100%
+
+	.btn-activate-menu
+		display: block
+
+	.main-nav
+		left: -$main-nav-width
+		overflow-y: scroll
+
+	.main-container
+		left: 0
+		width: 100%
 
 	.activate-menu
 		&:checked ~ .main-container
